--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/bullet3"]
 	path = vendor/bullet3
 	url = https://github.com/bulletphysics/bullet3
+[submodule "vendor/glm"]
+	path = vendor/glm
+	url = https://github.com/g-truc/glm
